<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="html_header">  <![CDATA[
                            <html>
                             <head></head>
                             <body style="text-align:justify;color:black;background-color:trasparent;font-size:150%">
                                               ]]>
    </string>

    <string name="html_footer">
                        <![CDATA[
                             </body>
                            </html>
                            ]]>
    </string>

    <string name="app_name">smART</string>
    <string name="title_activity_map">smART</string>
    <string name="title_activity_opengl_test">OpenglTestActivity</string>
    <string name="json_test">IDs will be visualised, latitude e longitude of the museums on the database:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_canvas_test">canvasTestActivity</string>
    <string name="title_activity_test_location">testLocationActivity</string>
    <string name="get_location">Get Location</string>
    <string name="disconnect">Disconnect Service</string>
    <string name="connect">Connect Service</string>
    <string name="title_activity_test_updating_location">testUpdatingLocationActivity</string>
    <string name="title_activity_jsontest">JSONTest</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="museum_search_hint">Search Museums</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="label__time">Time: </string>




    <!-- * * * * * * * * * * * * * * * * * * * * * *  INDOOR  * * * * * * * * * * * * * * * * * * * * * * * * -->

    <!-- * * * * INDOOR MAP FRAGMENT * * * * -->
    <string name="indoor__message__downloading">downloading</string>
    <string name="indoor__message__generating_building">Generating Building...</string>
    <string name="indoor__message__generated_building">Building generated!</string>

    <string name="indoor__error__cant_start_download__museum_is_null">Can\'t start download.. Indoor Map: museum = null.</string>

    <string name="indoor__error__cant_generate_building__file_not_found">Error: File not found in local.. Can\'t generate building.. Please retry to open this Building.</string>
    <string name="indoor__error__cant_generate_building__file_not_found_short">File not found.. can\'t generate building.</string>
    <string name="indoor__error__cant_access_local_db">Error: Can\'t access to local database file..  can\'t generate building.</string>
    <string name="indoor__error__onDownloadFail">Can\'t download file.. are you connected to internet? Server error? Searching for a local map...</string>
    <!-- * * * * INDOOR MAP FRAGMENT * * * * -->

    <!-- * * * * ARTWORK DESCRIPTION FRAGMENT * * * * -->

    <string name="indoor__label__picture">Artwork Picture: </string>
    <string name="indoor__label__artist">Artist: </string>
    <string name="indoor__label__year">Year: </string>
    <string name="indoor__label__location">Location: </string>
    <string name="indoor__label__dimensions">Dimensions: </string>
    <string name="indoor__label__tecnique">Technique: </string>

    <string name="indoor__label__info">Info: </string>
    <string name="indoor__label__descr">Description: </string>
    <string name="indoor__label__artist_info">Artist info: </string>

    <!-- * * * * ARTWORK DESCRIPTION FRAGMENT * * * * -->



    <!-- * * * * INDOOR MAP class * * * * -->
    <!--<string name="indoor__message__artwork_tooltip">Touch for\ninformations\nabout the artwork</string>-->
    <string name="indoor__message__artwork_tooltip">Touch for\nartwork info</string>
        <string name="indoor__message__lost_realtime_localization">You\’re no longer localised by our sensors.. your last position has been registered.
                                                                    \nGet close to a sensor or scan a QR code to update your current position.</string>
    <string name="indoor__message__qrcode_no_position_update">Your position will not be updated: you are now localised by a beacon.</string>
    <string name="indoor__message__qrcode_position_update">You have been localised through a QR Code!</string>
    <string name="indoor__message__beacon_position_update">You are now localised by a sensor!</string>
    <string name="indoor__message__cant_navigate__not_localized">Unfortunately we weren\’t able to locate you.. get close to a beacon or scan a QR code to navigate.</string>
    <string name="indoor__message__cant_navigate__no_marker_selected">Select a marker to navigate to.</string>
    <string name="indoor__message__cant_navigate__no_path_found">Unfortunately it\’s not possible to find a path to the selected artwork..</string>
    <string name="indoor__message__cant_navigate__artwork_without_position">Unfortunately the selected artwork has not been localised on the map..</string>

    <string name="indoor__debug__beacon_proximity">BEACON IS CLOSE!</string>
    <string name="indoor__debug__beacon_proximity_lost">BEACON IS FAR…</string>
    <!-- * * * * INDOOR MAP class * * * * -->

    <!-- * * * * * * * * * * * * * * * * * * * * * *  INDOOR  * * * * * * * * * * * * * * * * * * * * * * * * -->











    <!-- * * * * * * * * * * * * * * * * * * * * * *  OUTDOOR  * * * * * * * * * * * * * * * * * * * * * * * * -->

    <!-- * * * * OUTDOOR MAP class * * * * -->
    <string name="outdoor__message__tooltip_museum_proximity">Touch to get inside the museum</string>
    <!-- * * * * OUTDOOR MAP class * * * * -->

    <!-- * * * * MUSEUM LIST FRAGMENT * * * * -->
    <string name="outdoor__label__search_radius">Search range:</string>
    <string name="outdoor__label_backbutton_museum_list">Museums</string>
    <!-- * * * * MUSEUM LIST FRAGMENT * * * * -->

    <!-- * * * * MUSEUM DESCR FRAGMENT * * * * -->
    <string name="outdoor__label__museum_descr">Description</string>
    <string name="outdoor__label__museum_artwork_images">Artworks inside the museums</string>
    <string name="outdoor__label__museum_map_previw">Map of museum</string>
    <string name="outdoor__label__fab_goto_indoor">Go to museum\’s artworks</string>
    <!-- * * * * MUSEUM DESCR FRAGMENT * * * * -->

    <!-- * * * * * * * * * * * * * * * * * * * * * *  OUTDOOR  * * * * * * * * * * * * * * * * * * * * * * * * -->




</resources>
