<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewArtwork"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/artworkInfoLayout"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/artworkImage"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_image">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/artwork_image"
                        android:text="Artwork Picture:"
                        android:textColor="@android:color/darker_gray"
                        android:paddingTop="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_below="@id/artwork_image"
                        android:id="@+id/artwork_image_separator"/>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="200dp"
                        android:id="@+id/artworkImage"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="8dp"
                        android:layout_below="@+id/artwork_image_separator" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/layout_info">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/artworkInfos"
                        android:text="@string/indoor__label__info"
                        android:textColor="@android:color/darker_gray"
                        android:paddingTop="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_below="@id/artworkInfos"
                        android:id="@+id/separatorArtwork"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:id="@+id/artistName"
                        android:layout_below="@id/separatorArtwork"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:id="@+id/year"
                        android:layout_below="@id/artistName"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:id="@+id/type"
                        android:layout_below="@id/year"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:id="@+id/dimensions"
                        android:layout_below="@id/type"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:id="@+id/location"
                        android:layout_below="@id/dimensions"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_descr">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/descr1"
                        android:text="@string/indoor__label__descr"
                        android:textColor="@android:color/darker_gray"
                        android:paddingTop="8dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_below="@id/descr1"
                        android:id="@+id/separatorArtwork2"/>

                    <TextView
                        android:id="@+id/artworkDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/separatorArtwork2"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="left"
                        />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_artist_info">

                    <TextView
                        android:id="@+id/artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/artworkDescription"
                        android:text="@string/indoor__label__artist_info"
                        android:textColor="@android:color/darker_gray"
                        android:paddingTop="8dp"
                        android:layout_alignParentTop="false" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_below="@id/artist"
                        android:id="@+id/separatorArtwork3"/>

                    <TextView
                        android:id="@+id/artistDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/separatorArtwork3"
                        android:textColor="@android:color/black"/>
                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>